--- a/ameliabot/ameliabot.csproj
+++ b/ameliabot/ameliabot.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DnKR.PastaParse" Version="1.0.3" />
+    <PackageReference Include="DnKR.PastaParse" Version="*" />
     <PackageReference Include="DSharpPlus" Version="4.4.2" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.4.2" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.4.2" />
