--- a/application.yml
+++ b/application.yml
@@ -13,11 +13,11 @@ lavalink:
     sources:
       youtube: false
       bandcamp: false
-      soundcloud: true
+      soundcloud: false
       twitch: false
       vimeo: false
       mixer: false
-      http: false
+      http: true
       local: false
     bufferDurationMs: 400
     youtubePlaylistLoadLimit: 2 # Number of pages at 100 each
